[project]
name = "buildastaticwebsitegenerator"
version = "0.1.0"
description = "Let's build a static site generator from scratch! A static site generator takes raw content files (like Markdown and images) and turns them into a static website (a mix of HTML and CSS files)."
requires-python = ">=3.12"
dependencies = []
